--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -2,12 +2,20 @@ body,html {
     height: 100%;
     width: 100%;
     box-sizing: border-box;
+    background-color: var(--background);
+}
+
+:root{
+    --button:#0195DC;
+    --background:#E1E5E8;
+    --smalltexts:#9D9CA1;
+    --bigtexts:#262626;
 }
 
 .cart-main{
     height: 100vh;
     width: 100%;
-    background-color: whitesmoke;
+    background-color: var(--background);
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -44,7 +52,7 @@ body,html {
 .cart-products{
         /* min-height: calc(100% - 30px); */
         height: auto;
-        background-color:whitesmoke;
+        background-color:var(--background);
         padding: 10px 10px ;
         display: flex;
         gap: 10px;
@@ -53,8 +61,9 @@ body,html {
 
 .cart-product-card{
 
-    background-color: gainsboro;
+    background-color: #fff;
     padding: 10px;
+    border-radius: 10px;
     
 }
 
@@ -63,6 +72,7 @@ body,html {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    cursor: pointer;
     
     
 }
@@ -70,6 +80,94 @@ body,html {
 .buy-all-products{
     width: 20%;
     height: 100%;
-    background-color:gainsboro;
+    background-color:#fff;
+    padding: 20px;
+    text-align: center;
+    border-radius: 10px;
     
 }
+
+.buy{
+    margin-top: 10px;
+}
+
+.total{
+    margin-top: 50px;
+}
+
+
+.product-cross{
+    display: flex;
+    justify-content: space-between;
+}
+
+.delete-button{
+    background-color: rgb(175, 170, 170);
+    border: 1px solid black;
+    border-radius: 3px;
+    height: 30px;
+    width: 30px;
+}
+
+.sub-total{
+
+display: flex;
+align-items: end;
+   
+}
+
+.inc-dic-to{
+    display: flex;
+    justify-content: space-between;
+}
+
+.cross-main{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+/* #5ca1e1 */
+
+/* buy button-------------------- */
+
+.buying-button {
+    border-radius: 4px;
+    background-color: #5ca1e1;
+    border: none;
+    color: #fff;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+    width: 150px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 30px;
+    box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+  }
+  
+  .buying-button{
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .buying-button:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;  
+    top: 9px;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .buying-button:hover{
+    padding-right: 24px;
+    padding-left:8px;
+  }
+  
+  .buying-button:hover:after {
+    opacity: 1;
+    right: 10px;
+  }
